testcases/bad/templates/if-what.j2
{% if True %}
{% bad_tag %}
{% endif %}
